# elf

./: .gitignore  README.md  pyproject.toml  skill.md
elf/: __init__.py  agent.py  cli.py  github_api.py  models.py  report.py  scanner.py
elf/checks/: __init__.py  actions.py  agent_safety.py  build.py  dependencies.py  identity.py  provenance.py  source.py  structure.py
